# ceng477-computer-graphics

./: .gitattributes  .gitignore  README.md
HW1-RayTracer/: Makefile  raytracer.cpp
HW2-Rasterizer/: Color.h  Helpers.cpp  Helpers.h  Makefile  Matrix4.h  Scene.cpp  Scene.h  Vec3.h  Vec4.h
HW3-PlanetRenderer/: CMakeLists.txt  README.md
HW3-PlanetRenderer/src/: main.cpp  utility.cpp  utility.h
HW3-PlanetRenderer/working_dir/: PlanetRenderer
HW3-PlanetRenderer/working_dir/shaders/: clouds.frag  debug.frag  generic.vert  phong.frag  shadow_depth.frag  stars.frag  sun.frag
